@@ -20,6 +20,17 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<!-- OpenSearch tests must run sequentially -->
+					<parallel>none</parallel>
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+					<argLine>
+						--add-opens java.base/java.net=ALL-UNNAMED
+						-Xmx2048m
+						-XX:+UseG1GC
+					</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
